# roblox-downgrader

./: README.md  index.html  latest data.json  package-lock.json  package.json  svelte.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Background.svelte  Progressbar.svelte  dataFetcher.ts  downloader.ts  psRunner.ts
